remove py files for job boards not yet implemented

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ include/
 lib/
 __pycache__/
 chromedriver
+
+
+# Not yet implemented
+diceJobBoardScraper.py
+diceIndividualJobScraper.py
+pythonJobsHQJobBoardScraper.py
+pythonJobsHQIndividualJobScraper.py
