--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
-python-crontab==2.5.1
+# python-crontab==2.5.1
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
